--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>132</td> <td title="&lt;&lt;NewTest.afterSuite()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@426960147</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-39</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforetest()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforetest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.substraction()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">substraction</td> 
-  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.addition()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">addition</td> 
-  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-48</td> <td title="&gt;&gt;NewTest.beforesuite()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@426960147</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>3</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.multiplication()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">multiplication</td> 
-  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.division()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">division</td> 
-  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>23/03/29 13:55:05</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@17f62e33]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1896145823</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.substraction()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">substraction</td> 
+  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>33</td> <td title="&lt;&lt;NewTest.afterSuite()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843710487</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.addition()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">addition</td> 
+  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-40</td> <td title="&gt;&gt;NewTest.beforesuite()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843710487</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.division()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">division</td> 
+  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.multiplication()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">multiplication</td> 
+  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-33</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforetest()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforetest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
 </table>
