--- a/test-output/old/Suite1/methods-alphabetical.html
+++ b/test-output/old/Suite1/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;icelogintest.start()[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:34</td>   <td>23866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
-  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:34</td>   <td>23866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
-  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:34</td>   <td>23866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
-  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:34</td>   <td>23866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
-  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:34</td>   <td>23866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
-  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/10 17:42:34</td>   <td>23866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
-  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:39:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;icelogintest.start()[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:40:09</td>   <td>13727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">verifyLogin</td> 
+  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:40:09</td>   <td>13727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">verifyLogin</td> 
+  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:40:09</td>   <td>13727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">verifyLogin</td> 
+  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:40:09</td>   <td>13727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">verifyLogin</td> 
+  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:40:09</td>   <td>13727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">verifyLogin</td> 
+  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>23/04/10 23:40:09</td>   <td>13727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@6c6cb480]">verifyLogin</td> 
+  <td>TestNG-tests-1@1458028146</td>   <td></td> </tr>
 </table>
