--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d6ab7">  <td>23/04/18 12:35:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpTest.ligin()[pri:0, instance:TestNgAnnotations.EmpTest@411f53a0]">ligin</td> 
-  <td>TestNG-tests-1@799356147</td>   <td></td> </tr>
-<tr bgcolor="6d6ab7">  <td>23/04/18 12:35:13</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmpTest.before()[pri:0, instance:TestNgAnnotations.EmpTest@411f53a0]">&gt;&gt;before</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@799356147</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/04/18 13:32:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmpTest.before()[pri:0, instance:TestNgAnnotations.EmpTest@2b71e916]">&gt;&gt;before</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1378296484</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/04/18 13:32:50</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpTest.ligin()[pri:0, instance:TestNgAnnotations.EmpTest@2b71e916]">ligin</td> 
+  <td>TestNG-tests-1@1378296484</td>   <td></td> </tr>
 </table>
